--- a/manifest.json
+++ b/manifest.json
@@ -201,7 +201,13 @@
 					"css/mui.min.css",
 					"img/saishi_img.jpg",
 					"js/flexable.js",
-					"css/training.css"
+					"css/training.css",
+					"images/help.png",
+					"js/attestation.js",
+					"css/common.css",
+					"css/attestation.css",
+					"js/jquery.js",
+					"news/newsList.html"
 				],
 				"refer": [
 					"index_con.html"
@@ -220,6 +226,35 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"news/newsList.html": {
+				"resources": [
+					"js/mui.picker.js",
+					"images/Charity_img1.jpg",
+					"js/mui.poppicker.js",
+					"fonts/mui.ttf",
+					"images/look.png",
+					"js/artTemplate.js",
+					"js/city.data.js",
+					"css/mui.poppicker.css",
+					"css/mui.picker.css",
+					"index.html",
+					"news/newsDetailPage.html",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"news/newsDetailPage.html": {
+				"resources": [
+					"js/jquery-1.9.1.min.js",
+					"css/newsDetailPage.css",
+					"css/common.css",
+					"css/mui.min.css",
+					"js/flexable.js"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
@@ -233,10 +268,8 @@
 				"js/announce.js",
 				"img/map_img1.jpg",
 				"js/common.js",
-				"js/mui.poppicker.js",
 				"img/select2-spinner.gif",
 				"js/newsList.js",
-				"js/city.data.js",
 				"js/mui.js",
 				"js/newsarea.js",
 				"img/member.jpg",
@@ -257,10 +290,8 @@
 				"img/daoguan_img3.jpg",
 				"css/announceDetail.css",
 				"js/area.js",
-				"js/attestation.js",
 				"charity/charity_list.html",
 				"js/select2_locale_zh-CN.js",
-				"css/common.css",
 				"img/img1.png",
 				"css/select2.css",
 				"js/select2.js",
@@ -274,7 +305,6 @@
 				"img/Charity_img2.jpg",
 				"news/newsarea.html",
 				"img/daoguan_img2.jpg",
-				"css/newsDetailPage.css",
 				"img/newAdd.png",
 				"news/reply.html",
 				"js/zepto_1.1.3.js",
@@ -289,13 +319,11 @@
 				"img/daoguan_icon_noCertification.png",
 				"img/timg6.png",
 				"js/reply.js",
-				"js/mui.picker.js",
 				"img/timg5.png",
 				"css/reply.css",
 				"js/newsDetailPage.js",
 				"css/mui.css",
 				"css/training.less",
-				"css/attestation.css",
 				"attestation/attestation.html",
 				"img/look.png",
 				"js/newsZan.js",
@@ -303,20 +331,15 @@
 				"announce/announce.html",
 				"activationRecord/activationRecord.html",
 				"img/good.png",
-				"news/newsDetailPage.html",
 				"js/activationRecord.js",
-				"news/newsList.html",
 				"img/members_img.jpg",
 				"img/map_img2.jpg",
 				"img/back.png",
 				"img/daoguan_icon_Certification.png",
 				"js/location.js",
-				"css/mui.poppicker.css",
-				"js/jquery.js",
 				"attestation/identifyresult.html",
 				"img/timg3.jpg",
 				"css/newsZan.css",
-				"css/mui.picker.css",
 				"css/app.css",
 				"img/timg.jpg",
 				"img/Charity_img1.jpg",
