--- a/manifest.json
+++ b/manifest.json
@@ -209,7 +209,8 @@
 					"js/jquery.js",
 					"news/newsList.html",
 					"js/common.js",
-					"images/ztxx.png"
+					"images/ztxx.png",
+					"activationRecord/activationRecord.html"
 				],
 				"refer": [
 					"index_con.html"
@@ -257,6 +258,29 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"activationRecord/activationRecord.html": {
+				"resources": [
+					"js/zepto_1.1.3.js",
+					"css/activationRecord.css",
+					"js/activationRecord.js",
+					"js/artTemplate.js",
+					"activationRecord/training_con.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"activationRecord/training_con.html": {
+				"resources": [
+					"js/training_con.js",
+					"js/jquery-1.9.1.min.js",
+					"fonts/mui.ttf",
+					"css/iconfont.css",
+					"fonts/iconfont.ttf",
+					"css/training.css"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
@@ -276,7 +300,6 @@
 				"img/member.jpg",
 				"img/timg2.jpg",
 				"daoguan/map.html",
-				"css/activationRecord.css",
 				"css/newsArea.css",
 				"js/city.data-3.js",
 				"img/Charity_banner.jpg",
@@ -308,7 +331,6 @@
 				"img/daoguan_img2.jpg",
 				"img/newAdd.png",
 				"news/reply.html",
-				"js/zepto_1.1.3.js",
 				"daoguan/daoguan_Certification.html",
 				"aboutUs/aboutUs.html",
 				"img/select2x2.png",
@@ -330,9 +352,7 @@
 				"js/newsZan.js",
 				"js/identifyresult.js",
 				"announce/announce.html",
-				"activationRecord/activationRecord.html",
 				"img/good.png",
-				"js/activationRecord.js",
 				"img/members_img.jpg",
 				"img/map_img2.jpg",
 				"img/back.png",
